Fix: overflowing header bug

--- a/css/about.css
+++ b/css/about.css
@@ -5,7 +5,9 @@ body {
 }
 
 header {
+  width: 100vw;
   background-color: #FFFFFF;
+  overflow-x: hidden;
 }
 
 .logo-text, .nav-a {
